refactor: improve comment clarity and update data access method in payment processing services
- Refined comments in `PaymentOrchestratorImpl` for better clarity on session handling and expiry checks.
- Updated `WalletPaymentProcessorImpl` to replace `get(0)` with `getFirst()` for enhanced readability.